unpackaged/main/default/objects/AccountDistributor__c/AccountDistributor__c.object-meta.xml
<CustomObject>
    <description>Account Distributors from Aperity.</description>
    <label>Account Distributor</label>
    <nameField>
        <label>Sales Rep Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Distributors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>