unpackaged/main/default/objects/AccountDistributor__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Retail Accounts</relationshipLabel>
    <relationshipName>Distributors</relationshipName>
    <type>Lookup</type>
</CustomField>