unpackaged/main/default/objects/AccountDistributor__c/fields/DistributorProgramPartner__c.field-meta.xml
<CustomField>
    <fullName>DistributorProgramPartner__c</fullName>
    <formula>Distributor__r.ProgramPartner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Program Partner</label>
    <type>Checkbox</type>
</CustomField>