unpackaged/main/default/objects/AccountDistributor__c/fields/SalesRepID__c.field-meta.xml
<CustomField>
    <fullName>SalesRepID__c</fullName>
    <label>Sales Rep ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>