unpackaged/main/default/objects/AccountDistributor__c/fields/SalesRepName__c.field-meta.xml
<CustomField>
    <fullName>SalesRepName__c</fullName>
    <label>Sales Rep Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>