unpackaged/main/default/objects/AccountDistributor__c/fields/TeamID__c.field-meta.xml
<CustomField>
    <fullName>TeamID__c</fullName>
    <label>Team ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>