unpackaged/main/default/objects/AccountDistributor__c/fields/UpdatedByID__c.field-meta.xml
<CustomField>
    <fullName>UpdatedByID__c</fullName>
    <label>Updated By ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>