unpackaged/main/default/objects/AccountDistributor__c/fields/UpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>UpdatedDate__c</fullName>
    <label>Updated Date</label>
    <type>Date</type>
</CustomField>